# iroh-uniffi

./: Cargo.toml  test.py
src/: connection.rs  endpoint.rs  iroh_error.rs  lib.rs  util.rs
src/endpoint/: builder.rs  connection.rs  recv_stream.rs  send_stream.rs
